--- a/src/components/scss/navBar.scss
+++ b/src/components/scss/navBar.scss
@@ -12,6 +12,9 @@
   }
 
   .navMenu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .navBtn{      
       margin: 0 1rem;
@@ -27,8 +30,12 @@
     }
 
     &LogIn{
-      font-size: 1rem;
+      font-size: 1.5rem;
       font-weight: 700;
+    }
+
+    .cart-icon{
+      width: 3rem;
     }
   }
 }
